[project]
name = "a11y-checker"
version = "1.0.0"
description = "Asynchronous Python client for the accessibility checker API"
authors = [{ name = "Jacek Labudda", email = 'j.labudda@dock.codes' }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["error reporting", "monitoring", "async", "fastapi", "logging"]
dependencies = ["aiohttp>=3.9"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
